fix alignment sandbox-btn

--- a/css/style.css
+++ b/css/style.css
@@ -117,8 +117,8 @@ header button {
     background-image: url('/img/go-btn.png');
     background-position: 5.6rem 0.8rem;
     padding-right: 2rem;
-    height: 3rem;
-    margin-top: 1.5rem;
+    height: 3.1rem;
+    margin-top: 1.75rem;
     color: #000;
     font-weight: bold;
     text-align: center;
